# cx

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
config/: cx.providers.config.schema.yaml  internal.config.yaml  providers.default.yaml
crates/cx-providers/: Cargo.toml
crates/cx-providers/src/: lib.rs
docs/: agents-comparison.md  codex-desktop-custom-model-plan.md  codex2-hardcoded-customization.md  cx-agent-plan.md  cx-agent-ui-ux-plan.md  cx-agent-ux-rubric.md  cx-config-schema.yaml  cx-stats-plan.md
examples/: cx_agent_spike.rs
npm/: package.json
scripts/: build.sh  install-release.sh  install.sh
scripts/ux/: cx-agent-smoke.sh
src/: api.rs  lib.rs  main.rs  send.rs  session.rs  stats.rs  warp.rs
src/codex_app/: cdp.rs  inject.rs  mod.rs
src/cx_agent/: approval.rs  config.rs  events.rs  history.rs  mod.rs  rollout.rs  runtime.rs  session.rs
src/cx_agent/provider/: mapping.rs  mod.rs  rig.rs
src/cx_agent/tools/: bash.rs  edit_file.rs  glob.rs  grep.rs  mod.rs  read_file.rs  write_file.rs
src/cx_agent/tui/: approval_prompt.rs  chat.rs  mod.rs
src/probe/: db.rs  mod.rs  tui.rs  types.rs  view.rs
src/relay/: ipc.rs  mod.rs  pty.rs  transfer.rs
src/stats/: aggregate.rs  cache.rs  chart.rs  date.rs  db.rs  format.rs  image.rs  layout.rs  mod.rs  overview.rs  palette.rs  race.rs  svg.rs  table.rs  tui.rs  tui.test.tsx  types.rs  view.rs
src/stats/parser/: claude.rs  codex.rs  copilot.rs  manox.rs  mimo.rs  mod.rs  omp.rs  omp_session.rs  pi.rs  remora.rs
src/stats/view/: chart.ts  paint.ts  race.ts  view.test.ts
tests/: send_api.rs
