[package]
name = "cx-providers"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["remote-models"]
remote-models = ["dep:reqwest", "dep:url"]

[dependencies]
anyhow = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
url = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
